using Microsoft.AspNetCore.Identity;

namespace SoundMastery.Domain.Identity;

public class Role : IdentityRole<int>
{
}